# rov-23

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  install.sh
.github/: dependabot.yml
.github/workflows/: arduino-lint.yml  codeql.yml  cpp-linter.yml  industrial_ci_action.yml
float/Tranciever_Reciever/: Tranciever_Reciever.ino
float/Tranciever_Transmitter_WithUTC/: Tranciever_Transmitter_WithUTC.ino
float/float_transceiver/: float_transceiver.ino
float/surface_tranceiver/: surface_tranceiver.ino
float/surface_transceiver/: surface_transceiver.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
interfaces/: CMakeLists.txt  package.xml
interfaces/action/: BasicTask.action  Example.action
interfaces/msg/: Armed.msg  CameraControllerSwitch.msg  Manip.msg  ROVControl.msg  TaskFeedback.msg
interfaces/rov_interfaces/: CMakeLists.txt  package.xml
interfaces/rov_interfaces/msg/: Armed.msg  KeyboardStatus.msg  ROVControl.msg
interfaces/rov_interfaces/srv/: TaskRequest.srv
interfaces/srv/: ManipService.srv  SelectTask.srv  TaskRequest.srv
log/: latest_build
pi/camera_streamer/: README.md  package.xml  setup.cfg  setup.py
pi/camera_streamer/camera_streamer/: camera_switch.py  image_publisher.py
pi/camera_streamer/doc/: camera_streamer.md
pi/camera_streamer/launch/: camera_launch.py
pi/camera_streamer/test/: test_pep257.py
pi/flood_warning/: package.xml  setup.cfg  setup.py
pi/flood_warning/flood_warning/: flood_warning.py  gpio_test.py
pi/flood_warning/launch/: flood_warning_launch.py
pi/i2c/: i2c.py  requirements.txt  tca9555.py
pi/i2c/TCA9555/: .gitignore  README.md
pi/log/: latest_build
pi/manipulators/: package.xml  setup.cfg  setup.py
pi/manipulators/TCA9555/: LICENSE  setup.py
pi/manipulators/TCA9555/tca9555/: __init__.py  tca9555.py
pi/manipulators/config/: manip_params.yaml
pi/manipulators/launch/: manip_launch.py
pi/manipulators/manipulators/: i2c.py  manipGeneral.py  manip_publisher.py  manip_subscriber.py  manip_tester.py  manipulators.py  tca9555.py
pi/manipulators/test/: test_copyright.py
pi/pi_main/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
pi/pi_main/doc/: README.md
pi/pi_main/launch/: pi_launch.py
pi/pi_main/pi_main/: install_on_boot.py  udev_copy.py
pi/pi_main/udev_rules/: 80-camera.rules  99-pixhawk.rules  camera.rules  gpio.rules  ic2.rules
pi/pixhawk_communication/: README.md  package.xml  setup.cfg  setup.py
pi/pixhawk_communication/doc/: README.md
pi/pixhawk_communication/launch/: pixhawk_com_launch.py
pi/pixhawk_communication/pixhawk_communication/: pixhawk_communication.py
pi/realsense/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
pi/realsense/doc/: install_realsense.sh  main.md
pi/thrusters/: package.xml  setup.cfg  setup.py
rov_simulation/rov_description/: CMakeLists.txt  package.xml
rov_simulation/rov_gazebo/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.sh
src/manipulators/: setup.cfg  setup.py
surface/camera_viewer/: package.xml  setup.cfg  setup.py
surface/controller/: CMakeLists.txt  package.xml
surface/gui/: README.md  app.py  package.xml  run_gui.py  setup.cfg  setup.py
surface/gui/doc/: README.md  readme.md
surface/gui/event_nodes/: package.xml  setup.cfg  setup.py
surface/gui/event_nodes/event_nodes/: client.py  publisher.py  server.py  subscriber.py
surface/gui/gui/: app.py  app_node.py  operator_app.py  pilot_app.py  run_gui.py
surface/gui/gui/event_nodes/: client.py  event_node.py  publisher.py  server.py  subscriber.py
surface/gui/gui/modules/: arm.py  buoy_frog_widget.py  coral.py  float_comm.py  flood_status.py  logger.py  module.py  seagrass.py  task_selector.py  timer.py  video_area.py  video_grid.py  video_widget.py
surface/gui/launch/: gui_launch.py  operator_launch.py  pilot_launch.py
surface/gui/modules/: package.xml  setup.cfg  setup.py  task_selector.py
surface/gui/modules/modules/: log.py  logger.py  task_selector.py  test.py  tester.py  video.py  video_area.py
surface/keyboard_driver/: package.xml  setup.cfg  setup.py
surface/keyboard_driver/keyboard_driver/: keyboard_driver_node.py  keyboard_listener_node.py
surface/keyboard_driver/launch/: keyboard_driver.launch.py  keyboard_driver_launch.py  listen.launch.py
surface/keyboard_driver/test/: test_flake8.py
surface/ps5-controller/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
surface/ps5-controller/doc/: README.md  readme.md
surface/ps5-controller/launch/: controller_launch.py
surface/realsense/: package.xml  setup.py
surface/rov_gazebo/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
surface/rov_simulation/rov_description/: CMakeLists.txt  package.xml
surface/rov_simulation/rov_description/urdf/: bluerov_world.sdf  rov.sdf  rov.xacro
surface/src/: README.md
surface/surface_main/: CMakeLists.txt  package.xml  setup.cfg  setup.py
surface/surface_main/launch/: surface_all_nodes_launch.py  surface_launch.py  surface_operator_launch.py  surface_pilot_launch.py
surface/surface_main/scripts/: ROS2-Install-Galactic.sh
surface/task_selector/: README.md  package.xml  setup.cfg  setup.py
surface/task_selector/doc/: README.md  TaskSelector.md
surface/task_selector/launch/: task_scheduler_launch.py
surface/task_selector/task_selector/: action_client_node.py  action_server_node.py  autonomous_docking_node.py  basic_task_node.py  basic_task_timed_node.py  control_node.py  example_request_client.py  is_morning_node.py  manip_button.py  manual_control_node.py  task_requestor.py  task_selector.py  tasks.py
surface/task_selector/test/: test_manual_control_node.py
surface/task_selector_interfaces/: CMakeLists.txt  package.xml
surface/tranciever/: package.xml  serial_reader.py  setup.py
surface/transceiver/: package.xml  setup.cfg  setup.py
task_selector/: package.xml  setup.py
task_selector/task_selector/: action_server_node.py
task_selector/task_selector/action/: Example.action
(+313 files in other folders)
