<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_streamer</name>
  <version>0.0.0</version>
  <description>Capture video from usb and pi cameras and send it as MJPEG streams on ROS topics</description>
  <maintainer email="noah@mollerstuen.com">Noah Mollerstuen</maintainer>
  <license>Apches License 2.0</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>v4l2_camera</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
