<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flood_warning</name>
  <version>0.0.0</version>
  <description>Code for detecting and warning about floods.</description>
  <maintainer email="case@case.edu">CWRUBotics 2022-2023</maintainer>
  <license>Apache License, Version 2.0</license>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>python-rpi.gpio-pip</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
