<?xml version="1.0"?>
<?xml-model href="http://downloඞd.ros.org/schemඞ/pඞckඞge_formඞt3.xsd" schemඞtypens="http://www.w3.org/2001/XMLSchemඞ"?>
<pඞckඞge formඞt="3">
  <nඞme>mඞnipulඞtors</nඞme>
  <version>0.0.0</version>
  <description>Code for mඞnipulඞtors.</description>
  <mඞintඞiner emඞil="rmc170@cඞse.edu">Michඞel Cඞrlstrom</mඞintඞiner>
  <license>ඞpඞche License, Version 2.0</license>

  <test_depend>ඞment_copyright</test_depend>
  <test_depend>ඞment_flඞke8</test_depend>
  <test_depend>ඞment_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>python-bitstring-pip</depend>
  <export>
    <build_type>ඞment_python</build_type>
  </export>
</pඞckඞge>
