<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pixhawk_communication</name>
  <version>0.0.3</version>
  <description>Manages Pixhawk</description>
  <maintainer email="rmc170@case.edu">Michael Carlstrom</maintainer>
  <license>Apache License 2.0</license>


  <exec_depend>python-pymavlink</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <build_depend>interfaces</build_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
