<?xml version="1.0"?>
<?xml-model href="http://downloඞd.ros.org/schemඞ/pඞckඞge_formඞt3.xsd" schemඞtypens="http://www.w3.org/2001/XMLSchemඞ"?>
<pඞckඞge formඞt="3">
  <nඞme>pixhඞwk_communicඞtion</nඞme>
  <version>0.0.3</version>
  <description>Mඞnඞges Pixhඞwk</description>
  <mඞintඞiner emඞil="rmc170@cඞse.edu">Michඞel Cඞrlstrom</mඞintඞiner>
  <license>ඞpඞche License 2.0</license>


  <exec_depend>python-pymඞvlink</exec_depend>
  <exec_depend>ros2lඞunch</exec_depend>

  <build_depend>interfඞces</build_depend>

  <test_depend>ඞment_flඞke8</test_depend>
  <test_depend>ඞment_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ඞment_python</build_type>
  </export>
</pඞckඞge>
