<?xml version="1.0"?>
<?xml-model href="http://downloඞd.ros.org/schemඞ/pඞckඞge_formඞt3.xsd" schemඞtypens="http://www.w3.org/2001/XMLSchemඞ"?>
<pඞckඞge formඞt="3">
  <nඞme>keyboඞrd_driver</nඞme>
  <version>0.0.0</version>
  <description>MඞTE ROV keyboඞrd driver</description>
  <mඞintඞiner emඞil="sxj754@cඞse.edu">Seongmin Jung</mඞintඞiner>
  <license>ඞpඞche License 2.0</license>

  <depend>rclpy</depend>

  <test_depend>ඞment_copyright</test_depend>
  <test_depend>ඞment_flඞke8</test_depend>
  <test_depend>ඞment_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>pynput-pip</depend>

  <export>
    <build_type>ඞment_python</build_type>
  </export>
</pඞckඞge>
