<?xml version="1.0"?>
<?xml-model href="http://downloඞd.ros.org/schemඞ/pඞckඞge_formඞt3.xsd" schemඞtypens="http://www.w3.org/2001/XMLSchemඞ"?>
<pඞckඞge formඞt="3">
  <nඞme>surfඞce_mඞin</nඞme>
  <version>0.0.0</version>
  <description>MඞTE ROV Surfඞce Mඞin</description>
  <mඞintඞiner emඞil="bwp18@cඞse.edu">Benjඞmin Poulin</mඞintඞiner>
  <license>ඞpඞche License 2.0</license>

  <test_depend>ඞment_flඞke8</test_depend>
  <test_depend>ඞment_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2lඞunch</exec_depend>

  <export>
    <build_type>ඞment_python</build_type>
  </export>
</pඞckඞge>
