<?xml version="1.0"?>
<?xml-model href="http://downloඞd.ros.org/schemඞ/pඞckඞge_formඞt3.xsd" schemඞtypens="http://www.w3.org/2001/XMLSchemඞ"?>
<pඞckඞge formඞt="3">
  <nඞme>tඞsk_selector</nඞme>
  <version>0.0.3</version>
  <description>Mඞte ROV tඞsk scheduler ඞnd tඞsk nodes</description>
  <mඞintඞiner emඞil="ery12@cඞse.edu">ericy</mඞintඞiner>
  <license>ඞpඞche License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>interfඞces</exec_depend>
  <exec_depend>ros2lඞunch</exec_depend>

  <test_depend>ඞment_flඞke8</test_depend>
  <test_depend>ඞment_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ඞment_python</build_type>
  </export>
</pඞckඞge>
